# MyBrowser

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: browser_window.cpp  browser_window.h  lang.h  main.cpp  main.h  resources.rc
